Helpers: added widths

--- a/blanka-helpers.css
+++ b/blanka-helpers.css
@@ -138,6 +138,13 @@ body:hover .sr-only a, body:hover .sr-only input, body:hover .sr-only button { d
   }
 }
 
+/* Widths */
+
+.w-2    { width: 2em; }
+.w-3    { width: 3em; }
+.w-5    { width: 5em; }
+.w-10   { width: 10em; }
+
 /* Maximum widths */
 
 .maxw-40em {
