--- a/blanka-helpers.css
+++ b/blanka-helpers.css
@@ -40,35 +40,41 @@ body:hover .sr-only a, body:hover .sr-only input, body:hover .sr-only button { d
 
 /* Margins */
 
-.m-0 { margin: 0; }
+
 
 .m-x-a { margin-left: auto; margin-right: auto; }
 
+.m-0 { margin: 0; }
 .mt-0 { margin-top: 0; }
 .mb-0 { margin-bottom: 0; }
 .mr-0 { margin-right: 0; }
 .ml-0 { margin-left: 0; }
 
+.m-0-5  { margin: .5rem; }
 .mt-0-5 { margin-top: .5rem; }
 .mb-0-5 { margin-bottom: .5rem; }
 .mr-0-5 { margin-right: .5rem; }
 .ml-0-5 { margin-left: .5rem; }
 
+.m-1  { margin: 1rem; }
 .mt-1 { margin-top: 1rem; }
 .mb-1 { margin-bottom: 1rem; }
 .mr-1 { margin-right: 1rem; }
 .ml-1 { margin-left: 1rem; }
 
+.m-1-5  { margin: 1.5rem; }
 .mt-1-5 { margin-top: 1.5rem; }
 .mb-1-5 { margin-bottom: 1.5rem; }
 .mr-1-5 { margin-right: 1.5rem; }
 .ml-1-5 { margin-left: 1.5rem; }
 
+.m-2  { margin: 2rem; }
 .mt-2 { margin-top: 2rem; }
 .mb-2 { margin-bottom: 2rem; }
 .mr-2 { margin-right: 2rem; }
 .ml-2 { margin-left: 2rem; }
 
+.m-3  { margin: 3rem; }
 .mt-3 { margin-top: 3rem; }
 .mb-3 { margin-bottom: 3rem; }
 .mr-3 { margin-right: 3rem; }
@@ -78,33 +84,37 @@ body:hover .sr-only a, body:hover .sr-only input, body:hover .sr-only button { d
 
 /* Paddings */
 
-.p-0 { padding: 0; }
-
+.p-0  { padding: 0; }
 .pt-0 { padding-top: 0; }
 .pb-0 { padding-bottom: 0; }
 .pr-0 { padding-right: 0; }
 .pl-0 { padding-left: 0; }
 
+.p-0-5  { padding: .5rem; }
 .pt-0-5 { padding-top: .5rem; }
 .pb-0-5 { padding-bottom: .5rem; }
 .pr-0-5 { padding-right: .5rem; }
 .pl-0-5 { padding-left: .5rem; }
 
+.p-1  { padding: 1rem; }
 .pt-1 { padding-top: 1rem; }
 .pb-1 { padding-bottom: 1rem; }
 .pr-1 { padding-right: 1rem; }
 .pl-1 { padding-left: 1rem; }
 
+.pt-1-5 { padding: 1.5rem; }
 .pt-1-5 { padding-top: 1.5rem; }
 .pb-1-5 { padding-bottom: 1.5rem; }
 .pr-1-5 { padding-right: 1.5rem; }
 .pl-1-5 { padding-left: 1.5rem; }
 
+.p-2  { padding: 2rem; }
 .pt-2 { padding-top: 2rem; }
 .pb-2 { padding-bottom: 2rem; }
 .pr-2 { padding-right: 2rem; }
 .pl-2 { padding-left: 2rem; }
 
+.p-3  { padding: 3rem; }
 .pt-3 { padding-top: 3rem; }
 .pb-3 { padding-bottom: 3rem; }
 .pr-3 { padding-right: 3rem; }
@@ -140,7 +150,6 @@ body:hover .sr-only a, body:hover .sr-only input, body:hover .sr-only button { d
 
 /* Widths */
 
-.w-2    { width: 2em; }
 .w-3    { width: 3em; }
 .w-5    { width: 5em; }
 .w-10   { width: 10em; }
