Helpers: typo in padding class

--- a/blanka-helpers.css
+++ b/blanka-helpers.css
@@ -102,7 +102,7 @@ body:hover .sr-only a, body:hover .sr-only input, body:hover .sr-only button { d
 .pr-1 { padding-right: 1rem; }
 .pl-1 { padding-left: 1rem; }
 
-.pt-1-5 { padding: 1.5rem; }
+.p-1-5 { padding: 1.5rem; }
 .pt-1-5 { padding-top: 1.5rem; }
 .pb-1-5 { padding-bottom: 1.5rem; }
 .pr-1-5 { padding-right: 1.5rem; }
