--- a/blanka.css
+++ b/blanka.css
@@ -23,7 +23,8 @@ Block elements with bottom margins only
 */
 
 p, ul, ol, dl, table,
-blockquote, pre, hr {
+blockquote, pre, figure,
+hr {
   padding-top: 0;
   padding-bottom: 0;
   margin-top: 0;
@@ -89,7 +90,7 @@ hr {
   opacity: .25;
 }
 
-figcaption {
+figure {
   margin-left: 0;
   margin-right: 0;
 }  
