--- a/blanka-helpers.css
+++ b/blanka-helpers.css
@@ -47,42 +47,56 @@ body:hover .sr-only a, body:hover .sr-only input, body:hover .sr-only button { d
 .mb-0 { margin-bottom: 0; }
 .mr-0 { margin-right: 0; }
 .ml-0 { margin-left: 0; }
+.mx-0 { margin-left: 0; margin-right: 0; }
+.my-0 { margin-top: 0; margin-bottom: 0; }
 
 .m-0-25  { margin: .25rem; }
 .mt-0-25 { margin-top: .25rem; }
 .mb-0-25 { margin-bottom: .25rem; }
 .mr-0-25 { margin-right: .25rem; }
 .ml-0-25 { margin-left: .25rem; }
+.mx-0-25 { margin-left: .25rem; margin-right: .25rem; }
+.my-0-25 { margin-top: .25rem; margin-bottom: .25rem; }
 
 .m-0-5  { margin: .5rem; }
 .mt-0-5 { margin-top: .5rem; }
 .mb-0-5 { margin-bottom: .5rem; }
 .mr-0-5 { margin-right: .5rem; }
 .ml-0-5 { margin-left: .5rem; }
+.mx-0-5 { margin-left: .5rem; margin-right: .5rem; }
+.my-0-5 { margin-top: .5rem; margin-bottom: .5rem; }
 
 .m-1  { margin: 1rem; }
 .mt-1 { margin-top: 1rem; }
 .mb-1 { margin-bottom: 1rem; }
 .mr-1 { margin-right: 1rem; }
 .ml-1 { margin-left: 1rem; }
+.mx-1 { margin-left: 1rem; margin-right: 1rem; }
+.my-1 { margin-top: 1rem; margin-bottom: 1rem; }
 
 .m-1-5  { margin: 1.5rem; }
 .mt-1-5 { margin-top: 1.5rem; }
 .mb-1-5 { margin-bottom: 1.5rem; }
 .mr-1-5 { margin-right: 1.5rem; }
 .ml-1-5 { margin-left: 1.5rem; }
+.mx-1-5 { margin-left: 1.5rem; margin-right: 1.5rem; }
+.my-1-5 { margin-top: 1.5rem; margin-bottom: 1.5rem; }
 
 .m-2  { margin: 2rem; }
 .mt-2 { margin-top: 2rem; }
 .mb-2 { margin-bottom: 2rem; }
 .mr-2 { margin-right: 2rem; }
 .ml-2 { margin-left: 2rem; }
+.mx-2 { margin-left: 2rem; margin-right: 2rem; }
+.mx-2 { margin-top: 2rem; margin-bottom: 2rem; }
 
 .m-3  { margin: 3rem; }
 .mt-3 { margin-top: 3rem; }
 .mb-3 { margin-bottom: 3rem; }
 .mr-3 { margin-right: 3rem; }
 .ml-3 { margin-left: 3rem; }
+.mx-3 { margin-left: 3rem; margin-right: 3rem; }
+.mx-3 { margin-top: 3rem; margin-bottom: 3rem; }
 
 
 /* Paddings */
@@ -92,37 +106,56 @@ body:hover .sr-only a, body:hover .sr-only input, body:hover .sr-only button { d
 .pb-0 { padding-bottom: 0; }
 .pr-0 { padding-right: 0; }
 .pl-0 { padding-left: 0; }
+.px-0 { padding-left: 0; padding-right: 0; }
+.py-0 { padding-top: 0; padding-bottom: 0; }
+
+.p-0-25  { padding: .25rem; }
+.pt-0-25 { padding-top: .25rem; }
+.pb-0-25 { padding-bottom: .25rem; }
+.pr-0-25 { padding-right: .25rem; }
+.pl-0-25 { padding-left: .25rem; }
+.px-0-25 { padding-left: .25rem; padding-right: .25rem; }
+.py-0-25 { padding-top: .25rem; padding-bottom: .25rem; }
 
 .p-0-5  { padding: .5rem; }
 .pt-0-5 { padding-top: .5rem; }
 .pb-0-5 { padding-bottom: .5rem; }
 .pr-0-5 { padding-right: .5rem; }
 .pl-0-5 { padding-left: .5rem; }
+.px-0-5 { padding-left: .5rem; padding-right: .5rem; }
+.py-0-5 { padding-top: .5rem; padding-bottom: .5rem; }
 
 .p-1  { padding: 1rem; }
 .pt-1 { padding-top: 1rem; }
 .pb-1 { padding-bottom: 1rem; }
 .pr-1 { padding-right: 1rem; }
 .pl-1 { padding-left: 1rem; }
+.px-1 { padding-left: 1rem; padding-right: 1rem; }
+.py-1 { padding-top: 1rem; padding-bottom: 1rem; }
 
 .p-1-5 { padding: 1.5rem; }
 .pt-1-5 { padding-top: 1.5rem; }
 .pb-1-5 { padding-bottom: 1.5rem; }
 .pr-1-5 { padding-right: 1.5rem; }
 .pl-1-5 { padding-left: 1.5rem; }
+.px-1-5 { padding-left: 1.5rem; padding-right: 1.5rem; }
+.py-1-5 { padding-top: 1.5rem; padding-bottom: 1.5rem; }
 
 .p-2  { padding: 2rem; }
 .pt-2 { padding-top: 2rem; }
 .pb-2 { padding-bottom: 2rem; }
 .pr-2 { padding-right: 2rem; }
 .pl-2 { padding-left: 2rem; }
+.px-2 { padding-left: 2rem; padding-right: 2rem; }
+.py-2 { padding-top: 2rem; padding-bottom: 2rem; }
 
 .p-3  { padding: 3rem; }
 .pt-3 { padding-top: 3rem; }
 .pb-3 { padding-bottom: 3rem; }
 .pr-3 { padding-right: 3rem; }
 .pl-3 { padding-left: 3rem; }
-
+.px-3 { padding-left: 3rem; padding-right: 3rem; }
+.py-3 { padding-top: 3rem; padding-bottom: 3rem; }
 
 /* Borders */
 
